# data_assimilation

./: .gitignore  LorenzKalmanBucy.ipynb  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: bump-version.yml
KalmanBucyPractice/: GeneralizedKB.ipynb  GeneralizedKBLorenz63.ipynb  Lorenz63KalmanBucy.ipynb  Lorenz96KB.ipynb  LorenzKalmanBucy.ipynb
Nudging/: lorenz63nudging.ipynb
checkpoint/train_flow_K10sk1sU20_condGau/: config_flowred2_rk4_adamlr01_ls1stg0hs100hsm20nl100_seq100nsk1np10_epoch100_state.txt  log_flowred2_rk4_adamlr01_ls1stg0hs100hsm20nl100_seq100nsk1np10_epoch100_state.txt
kalman_bucy/: __init__.py  api.py  setup.py  utils.py
kalman_bucy/kalman_bucy/: api.py
kalman_bucy_filter.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: README.md
notebooks/CGKF/exploration/: barotropic.ipynb
notebooks/DynamicNudging/exploration/: lorenz63dynamic.ipynb  lorenz96dynamic.ipynb
notebooks/EnsembleKF/exploration/: lorenz63EKF.ipynb
notebooks/Nudging/exploration/: lorenz96nudging.ipynb
scratch/: README.md
scratch/KalmanBucyPractice/: BaroTopKB copy.ipynb  BaroTopKB.ipynb  explore_R96.ipynb
scratch/kalman_bucy/: api.py  api_deprecated.py
scratch/kalman_bucy_filter.egg-info/: SOURCES.txt  top_level.txt
scratch/outputs/: README.md
src/da/: __init__.py  utils.py
src/da/filters/: CGKF.py
src/da/models/: lorenz63.py
