[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "da"
version = "0.1.0"
description = "Conditionally Gaussian data assimilation methods and experiments"
authors = [{ name = "Lydia Tolman"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy","scipy","matplotlib"]
